<resources>
    <string name="app_name">My Application Kotlin</string>
    <string name="Count_text">0</string>
    <string name="toast_button">Toast</string>
    <string name="count_button">Add 1 point</string>
    <string name="reset_button">Reset count</string>
    <string name="random_heading">Это случайное число между 0 и %1d</string>
    <string name="random_button">Random</string>
    <string name="JavaСode">Javacode</string>
    <string name="Enter_message">Введите сообщение</string>

    <string name="title_activity_full">Full</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
</resources>
