<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
        android:background="@color/ScreenBackground">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Count_text"
            android:background="@color/colorPrimaryDark"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:textSize="90sp"
            android:textColor="@android:color/white"
            android:id="@+id/textView"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"/>
    <Button
            android:onClick="toastMe"
            android:text="@string/toast_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button_toastMe"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"/>

    <Button
            android:onClick="countAdd"
            android:text="@string/count_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/count_button"
            app:layout_constraintEnd_toStartOf="@+id/reset_button"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toEndOf="@+id/button_toastMe"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"/>
    <Button
            android:onClick="resetCount"
            android:text="@string/reset_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/reset_button"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"/>
    <Button
            android:onClick="randomMe"
            android:text="@string/random_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/random_button"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/reset_button" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="24dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="24dp"
            app:layout_constraintStart_toEndOf="@+id/View_application" android:layout_marginStart="24dp"/>
    <Button
            android:onClick="GoJavaCode"
            android:text="@string/JavaСode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button_JavaCode"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/button_toastMe"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"/>
    <Button
            android:onClick="GoViewApplication"
            android:text="View test"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/View_application"
            app:layout_constraintTop_toBottomOf="@+id/count_button"
            android:layout_marginTop="24dp" app:layout_constraintStart_toEndOf="@+id/button_JavaCode"
            android:layout_marginStart="24dp" app:layout_constraintEnd_toStartOf="@+id/random_button"
            android:layout_marginEnd="24dp"/>
</android.support.constraint.ConstraintLayout>